--- a/config/samples/scheduling_v1_podgroup.yaml
+++ b/config/samples/scheduling_v1_podgroup.yaml
@@ -6,4 +6,5 @@ metadata:
     app.kubernetes.io/managed-by: kustomize
   name: podgroup-sample
 spec:
-  # TODO(user): Add fields here
+  group_name: podgroup-sample
+  min_num: 3
