--- a/config/samples/kustomization.yaml
+++ b/config/samples/kustomization.yaml
@@ -1,4 +1,5 @@
 ## Append samples of your project ##
 resources:
 - scheduling_v1_podgroup.yaml
+- scheduling_v1_gang.yaml
 # +kubebuilder:scaffold:manifestskustomizesamples
