--- a/config/samples/scheduling_v1_gang.yaml
+++ b/config/samples/scheduling_v1_gang.yaml
@@ -5,18 +5,14 @@ metadata:
 spec:
   replicas: 2  # 创建 2 个 PodGroup 副本
   labels:
-    app: my-gang-app
+    app: my-gang
   template:
-    metadata:
-      labels:
-        app: my-gang-app
+    labels:
+      app: my-gang
     spec:
-      minMember: 2  # 每个 PodGroup 至少需要 2 个 Ready Pod
-      groupName: my-group
+      min_num: 2  # 每个 PodGroup 至少需要 2 个 Ready Pod
+      group_name: my-group
       template:
-        metadata:
-          labels:
-            app: my-pod
         spec:
           containers:
           - name: nginx
